--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,4 +1,4 @@
-/* Reseta o layout */
+
 * {
     margin: 0;
     padding: 0;
@@ -17,7 +17,6 @@ body {
     padding: 80px 20px;
 }
 
-/* Formularios */
 .container {
     background-color: rgba(255, 255, 255, 0.8);
     padding: 55px;
@@ -28,7 +27,6 @@ body {
 
 }
 
-/* titulo */
 h1 {
     text-align: center;
     color: #201c1c;
@@ -37,7 +35,7 @@ h1 {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-/* Estilização dos formulários */
+
 form {
     display: flex;
     flex-direction: column;
@@ -249,21 +247,81 @@ button:hover {
     color: #555;
 }
 
-#autocomplete-list {
+.suggestions {
     list-style-type: none;
-    margin: 0;
     padding: 0;
-    max-height: 200px;
+    margin: 10px 0;
+    left: 28px;
+    max-height: 150px;
     overflow-y: auto;
-    position: absolute;
-    width: 80%;
-    background-color: white;
-    box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+    width: calc(100% - 40px); /* Ajuste conforme a largura do input */
+    z-index: 1000;
 }
-#autocomplete-list li {
-    padding: 8px;
+
+.suggestions li {
+    padding: 10px;
     cursor: pointer;
 }
-#autocomplete-list li:hover {
+
+.suggestions li:hover {
+    background-color: #f2f2f2;
+}
+
+.pokemon-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.pokemon-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+    width: 120px;
+}
+
+.pokemon-item img {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 10px;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.pagination button {
+    padding: 10px 20px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: #ffcc00;
+    color: #333;
+    font-weight: bold;
+    transition: background-color 0.3s;
+}
+
+.pagination button:hover {
+    background-color: #ffdf80;
+}
+
+.pagination button:disabled {
     background-color: #ddd;
+    cursor: not-allowed;
 }
